fixed issues that were suggested in the code review