@@ -64,13 +64,13 @@ public class HabitTranslationMapper extends AbstractConverter<HabitTranslationDt
      */
     public List<HabitTranslation> mapAllToList(List<HabitTranslationDto> dtoList, Language language, Habit habit) {
         return dtoList.stream()
-            .filter(dto -> language.getCode().equals(dto.getLanguageCode()))
+            .filter(dto -> Objects.equals(language.getCode(), dto.getLanguageCode()))
             .map(dto -> {
                 HabitTranslation habitTranslation = convert(dto);
                 habitTranslation.setLanguage(language);
                 habitTranslation.setHabit(habit);
                 return habitTranslation;
             })
-            .collect(Collectors.toList());
+            .toList();
     }
 }
